<resources>
    <!-- todo name        TOP:1-->
    <string name="app_name">语音笔记</string>

    <string name="navigation_open">open</string>
    <string name="navigation_close">close</string>

    <string name="work1_tab_text">备忘录</string>
    <string name="work2_tab_text">记账</string>
    <string name="work3_tab_text">我的</string>
    <string name="work3_head">记录生活</string>
    <string name="work3_subtitle">随心记</string>
    <string name="about_email_title">联系方式</string>
    <string name="about_email_content">tsukai_ma@163.com</string>
    <string name="about_version">ver0.1</string>
    <string name="about_content">将你的美好回忆停留在这一刻</string>
    <string name="lock_activity_text">开启手势解锁</string>
    <string name="vertify_password_text">请输入密码</string>
    <string name="fragment_note_all">All</string>
</resources>
